<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EndgameActivity"
    android:background="@drawable/fone">

    <TextView
        android:id="@+id/textView1"
        android:textSize="48sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/endgame_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/iceland"
        android:textColor="@color/textButtonStandard"
        android:shadowColor="@color/ultraBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endgame_score"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/textButtonStandard"
        android:shadowColor="@color/ultraBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/iceland"
        android:shadowColor="@color/ultraBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/EMPTY"
        android:textColor="@color/textButtonAccent"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="24dp"
        android:text="@string/button_retry"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button2"
        android:textColor="@color/textButtonStandard"
        android:background="@color/foneButtonStandard"
        android:shadowColor="@color/ultraBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="24dp"
        android:text="@string/button_exit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button1"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/textButtonStandard"
        android:background="@color/foneButtonStandard"
        android:shadowColor="@color/ultraBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"/>

    <LinearLayout
        android:id="@+id/left_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/right_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">


        <TextView
            android:id="@+id/textViewL1"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pts_header"
            android:layout_margin="8dp"
            android:fontFamily="@font/iceland"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewL2"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/difficulty_header"
            android:layout_margin="8dp"
            android:fontFamily="@font/iceland"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/textViewL3"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multi_header"
            android:layout_margin="8dp"
            android:fontFamily="@font/iceland"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toEndOf="@+id/left_container">

        <TextView
            android:id="@+id/textViewR1"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EMPTY"
            android:layout_margin="8dp"
            android:fontFamily="@font/iceland"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/textViewR2"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EMPTY"
            android:layout_margin="8dp"
            android:fontFamily="@font/iceland"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/textViewR3"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EMPTY"
            android:layout_margin="8dp"
            android:fontFamily="@font/iceland"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>