<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RanksActivity"
    android:background="@drawable/fone">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ranks_header"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/left_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/textButtonStandard"
        android:shadowColor="@color/ultraBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ranks_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/textButtonStandard"
        android:background="@color/foneButtonStandard"
        android:shadowColor="@color/ultraBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/left_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/textViewL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/textViewL3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"/>

        <TextView
            android:id="@+id/textViewL4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewL5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewL6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewL7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewL8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewL9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewL10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:text="@string/EMPTY"
            android:textSize="36sp"
            android:textColor="@color/textButtonStandard"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@id/right_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewR1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

        <TextView
            android:id="@+id/textViewR10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/iceland"
            android:gravity="right"
            android:text="@string/real_zero"
            android:textSize="36sp"
            android:textColor="@color/textButtonAccent"
            android:shadowColor="@color/ultraBlack"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>